Oct 19, 2004

  * Do goal expansion on the argument of rdf_transaction/1.  Sandro
    Hawke.

Oct 18, 2004 (version 2.2.0)

  * ADDED: rdf_transaction/1

Oct 13, 2004

  * FIXED: Total reorganisation of the multi-threaded access using 
    redesigned locking which allows for one writer and multiple readers.

Oct 12, 2004

  * INTERNAL: Preparing for seperate databases by combining all global
    data in a single structure.

Oct 6, 2004

  * ADDED/FIXED: Various issues in the documentation.

Sep 29, 2004

  * FIXED: Avoid continuous recomputation of `direct' (rdf) branching
    factors.

Sep 28, 2004

  * FIXED: complexity estimate for not-indexed queries (crash).

Sep 14, 2004

  * ENHANCED: Actually start of with small tables and resize them if the
    triple count increases.  Reduces memory usage and improves speed on
    erasing and re-hashing small datasets.

  * FIXED: Bug#183: memory corruption due to invalid free.  Sandro Hawke.
    Same test also provided other consistency errors.

Sep 2, 2004

  * FIXED: rdfs_subclass_of(+Class, -Super) to relate all classes 
    implicitely to rdfs:Resource (rdfs entailment rule).

  * FIXED: Bug#182: After rdf_retractall(_,_,_) database cannot be refilled.
    Sandro Hawke.

Sep 1, 2004

  * FIXED: rdf_match_label(like, '*Rijn*', 'van Rijn')

  * ADDED: rdf_predicate_property/2 new properties rdfs_object_branch_factor
    and rdfs_subject_branch_factor.

Aug 31, 2004

  * ADDED: rdf_predicate_property/2 new properties rdf_object_branch_factor
    and rdf_subject_branch_factor.

Aug 27, 2004

  * FIXED: module problem in rdf_db.pl

Aug 26, 2004

  * ADDED: convert_typed_literal option to rdf_save/2.  Bug#171. 
    Sandro Hawke.

Aug 19, 2004

  * ADDED: rdf_estimate_complexity/4.

  * ADDED: rdf_predicate_property(+Predicate, triples(-Count)) to find
    the number of triples on a predciate.

Aug 11, 2004

  * FIXED: rdf_load_db/1 now updates the source registration
    (rdf_source/1).

Jul 30, 2004
